--- a/tools/_dups/external/unified-dta-system/requirements-dev.txt
+++ b/tools/_dups/external/unified-dta-system/requirements-dev.txt
@@ -1,44 +1,3 @@
-# Development dependencies for the Unified DTA System
-
-# Testing
-pytest>=6.0.0
-pytest-cov>=2.0.0
-pytest-xdist>=2.0.0
-pytest-mock>=3.0.0
-
-# Code quality
-black>=22.0.0
-flake8>=4.0.0
-isort>=5.0.0
-mypy>=0.800
-
-# Pre-commit hooks
-pre-commit>=2.0.0
-
-# Documentation
-sphinx>=4.0.0
-sphinx-rtd-theme>=1.0.0
-myst-parser>=0.15.0
-sphinx-autodoc-typehints>=1.12.0
-
-# Jupyter notebooks
-jupyter>=1.0.0
-ipywidgets>=7.0.0
-nbconvert>=6.0.0
-
-# Visualization
-matplotlib>=3.5.0
-seaborn>=0.11.0
-plotly>=5.0.0
-
-# Package building
-build>=0.7.0
-twine>=3.0.0
-
-# Performance profiling
-memory-profiler>=0.60.0
-line-profiler>=3.0.0
-
-# Additional utilities
-tqdm>=4.64.0
-psutil>=5.8.0
+version https://git-lfs.github.com/spec/v1
+oid sha256:efea8ee5c2589692aeaef4cd8dcba76174f2f43d8f9d7a13a2a6a97b02c65a10
+size 653
