--- a/tools/_dups/external/unified-dta-system/requirements.txt
+++ b/tools/_dups/external/unified-dta-system/requirements.txt
@@ -1,33 +1,3 @@
-# Core deep learning dependencies
-torch>=1.12.0
-torch-geometric>=2.1.0
-transformers>=4.20.0
-
-# Scientific computing
-numpy>=1.21.0
-scipy>=1.7.0
-pandas>=1.3.0
-
-# Chemistry and bioinformatics
-rdkit>=2022.03.0
-
-# Configuration and utilities
-pyyaml>=6.0
-tqdm>=4.64.0
-psutil>=5.8.0
-
-# Optional dependencies for enhanced functionality
-matplotlib>=3.5.0
-seaborn>=0.11.0
-scikit-learn>=1.1.0
-
-# API dependencies
-fastapi>=0.100.0
-uvicorn[standard]>=0.23.0
-pydantic>=2.0.0
-
-# Development and testing (optional)
-pytest>=6.0.0
-pytest-cov>=2.0.0
-black>=22.0.0
-flake8>=4.0.0
+version https://git-lfs.github.com/spec/v1
+oid sha256:a3e7d64fc51e4e806f79dcf4434f092e1c94a3337e65a8472695a4b15de0291d
+size 559
